# packages/api-client/openapi.json
@@ -8461,6 +8461,9 @@
               "branches": {
                 "type": "boolean"
               },
+              "records": {
+                "type": "boolean"
+              },
               "audit": {
                 "type": "boolean"
               },
@@ -8473,6 +8476,7 @@
               "memberships",
               "people",
               "branches",
+              "records",
               "audit",
               "settings"
             ],
